Version 5.8.0 - 2020-11-02
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.5
* Allow the product template code to be set from a sequence
* Set code column first in template tree view
* Add default order on product and template
* Check price_decimal configuration

Version 5.6.0 - 2020-05-04
* Bug fixes (see mercurial logs for details)
* Add round_price
* Make product code unique
* Add code to template as variant prefix code
* Hide product fields inherited from template when empty
* Skip default products when template is created from product
* Search also on variant name when searching on template record name

Version 5.4.0 - 2019-11-04
* Bug fixes (see mercurial logs for details)
* Allow the product code to be set by a sequence
* Allow UoM conversion between different categories
* Add product identifiers

Version 5.2.0 - 2019-05-06
* Bug fixes (see mercurial logs for details)
* Remove starting wildcard when searching on codes and numbers

Version 5.0.0 - 2018-10-01
* Bug fixes (see mercurial logs for details)
* Remove support for Python 2.7

Version 4.8.0 - 2018-04-23
* Bug fixes (see mercurial logs for details)
* Enforce digits length on Rounding Precision on Unit of Measure

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)
* Show all products by category
* Limit cost method to fixed for service
* Move cost_price from Template to Product

Version 4.4.0 - 2017-05-01
* Bug fixes (see mercurial logs for details)
* Add ceil and floor as uom rounding

Version 4.2.0 - 2016-11-28
* Bug fixes (see mercurial logs for details)
* Add relate from Template to Products

Version 4.0.0 - 2016-05-02
* Bug fixes (see mercurial logs for details)
* Replace category by categories on Template
* Add Python3 support
* Add configuration for default cost price method
* Change Uom.round into an instance method
* Add Function fields on Product from Template

Version 3.8.0 - 2015-11-02
* Bug fixes (see mercurial logs for details)