@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<form col="2">
+    <label name="name"/>
+    <field name="name" readonly="1"/>
+    <field name="templates" colspan="2"/>
+</form>
